<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicketFairy</string>
    <string name="action_settings">Settings</string>
    <string name="tweet_list">Gig Details</string>
    <string name="gig_list">Gig List</string>
    <string name="search_hint">"Search artists"</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="artist_name">Artist Name</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="gig_details">Gig Details</string>
    <string name="venue">Venue</string>
    <string name="band_name">Band Name</string>
    <string name="about">Ticket Fairy: The #TicketFairy app for sold out gigs in Dublin. Get frequent ticket updates on gigs you\'re following.</string>
    <string name="thanks">Thanks to:</string>
    <string name="songkick">Song Kick</string>
    <string name="about_contact">For feedback and suggestions, please contact us at:</string>
    <string name="contact_email">ticketfairyapp@gmail.com</string>
    <string name="sending_email">Send email using</string>
    <string name="add_resc">Additional Resources</string>
    <string name="find_us">Find Us :</string>
    <string name="clara">clarabellafairestock.deviantart.com/</string>
    <string name="about1">About</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="preferences">Preferences</string>
    <string name="enable_summary">Enable or disable data updates</string>
    <string name="enable_title">Enable updates</string>
    <string name="interval_summary">Define how often updates will be performed</string>
    <string name="interval_title">Updates interval</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="image">image</string>
    <string name="notify_me">Track this gig</string>
    <string name="tracking">Tracking</string>
    <string name="title_activity_new_tweets">NewTweets</string>
    <string name="tfimage"></string>
    <string name="title_activity_gigs_manager">Notification Manager</string>
    <string name="resell">No tweets yet. Start tracking this gig, or click here to buy tickets from ticket agents and resellers!</string>
    <string name="refresh_gig">Refresh gig</string>
    <string name="no_gigs_tracked">You are not tracking any gigs!</string>
    <string name="no_gigs_tip">Try browsing gigs, and when you find one you want to track, press the big purple button that looks like this!</string>
    <string name="last_updated">Updated: </string>
    <string name="last_updated_minute"> minutes ago</string>
    <string name="last_updated_hour"> hours ago</string>
    <string name="last_updated_day"> days ago</string>
    <string name="last_updated_secs">less than a minute ago</string>
    <string name="alert_dialog_sure">Are you sure?</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_delete">Delete</string>
    <string name="network_error_message">Network Connection Error</string>
    <string name="tap_to_refresh">Tap to refresh</string>
    <string name="no_results">No upcoming gigs found for</string>

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>